<resources>
    <string name="app_name">Flashlight</string>
    <string name="settings">Settings</string>
    <string name="facebook_profile_id">facebookid</string>
    <string name="instagram_profile">intergram</string>
    <string name="twitter_web_user">twitter</string>
    <string name="my_email">email</string>
    <string name="my_email_subject">App Feedback</string>
    <string name="send_email">Send Email…</string>
    <string name="share_app_link">Hey check out this Flashlight app at: https://play.google.com/store/apps/details?id=</string>
    <string name="more_apps_url">https://moreapps.com</string>
    <string name="power_on_off">power on off</string>
    <string name="back_lights">back lights</string>
    <string name="front_lights">front lights</string>
    <string name="screen_lights">screen lights</string>
    <string name="exit_application">exit application</string>
    <string name="alert">alert</string>
    <string name="battery_low_setting">battery low setting</string>
    <string name="timeout_setting">timeout setting</string>
    <string name="general">General</string>
    <string name="notification_toolbar_toggle">Notification toolbar toggle</string>
    <string name="shortcut_to_turn_on_off_flashlight">Shortcut to turn on/off flashlight</string>
    <string name="switch_sound">Switch sound</string>
    <string name="turn_on_sounds">Turn on sounds</string>
    <string name="turn_on_at_startup">Turn on at startup</string>
    <string name="turn_on_flashlight_on_app_startup">Turn on flashlight on app startup</string>
    <string name="turn_off_at_exit">Turn off at exit</string>
    <string name="turn_off_flashlight_after_app_exit">Turn off flashlight after app exit</string>
    <string name="automatic_off">Automatic off</string>
    <string name="power_control">Power control</string>
    <string name="remove_ads_forever">Remove Ads forever</string>
    <string name="about">About</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="my_email_subject_remove_ads">Remove Ads</string>
    <string name="share_app">Share App</string>
    <string name="more_apps">More Apps</string>
    <string name="flashlight">Flashlight</string>
    <string name="version">Version 0.1</string>
    <string name="follow_us">Follow Us</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="sos">sos</string>
    <string name="turn_of_flashlight_after_a_period_of_time">Turn of flashlight after a period of time</string>
    <string name="low_battery_warning_turnoff">Low battery warning turnoff</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure,You want to exit</string>
    <string name="turn_off_flashlight_low_battery_at">Turn off flashlight low battery at:</string>
    <string name="turn_off_flashlight_after">Turn off flashlight after:</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="error_all_flash">Error flashlight not available use screen flashlight instead</string>
    <string name="error_front_cam">Error flashlight not available use back flashlight  or screen flashlight instead</string>


</resources>