<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@android:color/transparent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_error__24"
            android:contentDescription="@string/alert" />
    </RelativeLayout>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/flashlight"
    android:textAlignment="center"
    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
    android:gravity="center_horizontal" />
<TextView
    android:id="@+id/textViewErrorM"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text=""
    android:textAlignment="center"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonOk"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/ok"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>



</LinearLayout>